# oss-audit

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  pyproject.toml
docs/adr/: 0001-telemetry-is-advisory.md
oss_audit/: cli.py  models.py  report.py  rubric.py  runner.py  scanners.py  severity.py
oss_audit/report/: __init__.py  _common.py  _html.py  _json.py  _markdown.py
tests/: conftest.py  test_attribution.py  test_cli_helpers.py  test_e2e.py  test_parsers.py  test_report.py  test_rubric.py  test_severity.py
tests/fixtures/: grype.json  scorecard.json
