[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-audit"
version = "0.1.0"
description = "CLI tool to audit open-source repositories for security, privacy, and licensing issues"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
oss-audit = "oss_audit.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["oss_audit*"]